<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtNoiseSuppressionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textColor="@color/color_3C4267"
        android:textSize="@dimen/sp_13"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/mbChatroomOff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mbChatroomOff"
        tools:text="@string/chatroom_your_ains" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mbChatroomHigh"
        style="@style/chatroom_bottom_sheet_frame_text_style"
        android:layout_marginEnd="6dp"
        android:background="@drawable/bg_rect_radius4_grey"
        android:text="@string/chatroom_high"
        android:textColor="@color/dark_grey_color_979CBB"
        app:layout_constraintBottom_toBottomOf="@+id/mbChatroomOff"
        app:layout_constraintEnd_toStartOf="@+id/mbChatroomMedium"
        app:layout_constraintTop_toTopOf="@+id/mbChatroomOff" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mbChatroomMedium"
        style="@style/chatroom_bottom_sheet_frame_text_style"
        android:layout_marginEnd="6dp"
        android:text="@string/chatroom_medium"
        app:layout_constraintBottom_toBottomOf="@+id/mbChatroomOff"
        app:layout_constraintEnd_toStartOf="@+id/mbChatroomOff"
        app:layout_constraintTop_toTopOf="@+id/mbChatroomOff" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mbChatroomOff"
        style="@style/chatroom_bottom_sheet_frame_text_style"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/bg_rect_radius4_grey"
        android:text="@string/chatroom_off"
        android:textColor="@color/dark_grey_color_979CBB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
