<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/base_layout"
    android:layout_width="300dp"
    android:layout_height="240dp"
    android:layout_gravity="center"
    android:background="@drawable/bg_rect_radius20_white"
    android:paddingTop="30dp"
    android:paddingBottom="30dp">

    <com.google.android.material.textview.MaterialTextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/title"
        android:textSize="@dimen/text_size_16sp"
        android:textColor="@color/dark_grey_color_040925"
        android:text="@string/room_create_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <io.agora.secnceui.widget.encryption.ChatroomEncryptionInputView
        android:id="@+id/mtContent"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:isWaitInput ="true"
        android:textCursorDrawable="@drawable/bg_edit_cursor"
        app:round="8dp"
        app:textSize="@dimen/text_size_18sp"
        app:isPwd="false"
        android:inputType="number"
        app:textColor="@color/dark_grey_color_040925"
        app:textLength="4"
        app:defaultColor="#E4E3ED"
        app:backColor="@color/white"
        app:checkedColor="#E4E3ED"
        app:waitInputColor="@color/main_color_009FFF"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:paddingHorizontal="22dp"
        android:paddingVertical="12dp"
        android:text="@string/chatroom_cancel"
        android:textAllCaps="false"
        android:textColor="@color/dark_grey_color_040925"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"
        app:backgroundTint="@color/dark_grey_color_EFF4FF"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toStartOf="@+id/gl50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mtContent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl50"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="25dp"
        android:paddingHorizontal="22dp"
        android:paddingVertical="12dp"
        android:text="@string/chatroom_confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"
        app:backgroundTint="@color/main_color_156EF3"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gl50"
        app:layout_constraintTop_toBottomOf="@+id/mtContent" />

</androidx.constraintlayout.widget.ConstraintLayout>